# want-this

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.test.yml  docker-compose.yml  package.json  tailwind.config.js  users.yml  want-this.session.sql
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
api_format/: Cargo.toml
api_format/src/: lib.rs  organizations.rs  users.rs
backend/: Cargo.toml  Dockerfile
backend/src/: actions.rs  auth.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  media.rs  session.rs  utility.rs
backend/src/actions/: users.rs
backend/src/domain/: entity.rs  repositories.rs
backend/src/domain/entity/: google.rs  item.rs  organization.rs  organizations.rs  user.rs  users.rs
backend/src/domain/repositories/: organizations.rs  users.rs
backend/src/domain/repository/: organization.rs  user.rs
backend/src/domain/service/: auth.rs  organizations.rs  user.rs  users.rs
backend/src/infrastructure/: item.rs  items.rs  organization.rs  organizations.rs  user.rs  users.rs
backend/src/service/: auth.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/js/: hello.js
frontend/src/: api.rs  bindings.rs  component.rs  header.rs  lib.rs  main.rs  route.rs
frontend/src/component/: cta.rs  header.rs  login.rs  modal.rs  side_menu.rs  team.rs  utility.rs
frontend/src/route/: login.rs  main.rs  settings.rs
json_format/: Cargo.toml
json_format/src/: lib.rs
redis/conf/: redis.conf
sql/: migration.sql  test-data.sql  v0-1-0.sql
