[package]
edition = "2021"
name = "want-this-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-redis = "0.10.0"
actix-session = "0.5.0"
actix-web = "4.0.1"

async-stream = "0.3.3"
env_logger = "0.9.0"
log = "0.4.17"
oauth2 = "4.2.0"
serde = {version = "1.0.137", features = ["derive"]}

base64 = "0.13.0"
dotenv = "0.15.0"
jsonwebtoken = "8.1.0"
once_cell = "1.10.0"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0.81"
