[package]
edition = "2021"
name = "want-this-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-redis = "0.10.0"
actix-session = "0.5.0"
actix-web = "4.0.1"

async-stream = "0.3.3"
log = "0.4.17"
oauth2 = "4.2.0"
serde = {version = "1.0.137", features = ["derive"]}
simplelog = "0.12.0"

anyhow = "1.0.57"
async-trait = "0.1.53"
base64 = "0.13.0"
chrono = "0.4.19"
derive_more = "0.99.17"
dotenv = "0.15.0"
getset = "0.1.2"
jsonwebtoken = "8.1.0"
num_cpus = "1.13.1"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0.81"
sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "chrono", "uuid"]}
strum = {version = "0.24", features = ["derive"]}
uuid = {version = "1.1.0", features = ["v4"]}

[dev-dependencies]
testfixtures = {version = "0.1", default-features = false, features = ["runtime-tokio"]}
tokio = {version = "1.18.2", features = ["full"]}

[profile.dev.package.sqlx-macros]
opt-level = 3
