[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
yew = "0.19"
yew-router = "0.16"
