[package]
edition = "2021"
name = "want-this-frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
# yew = {version = "0.19.3", features = ["tokio", "csr"]}
console_error_panic_hook = "0.1.7"
gloo-utils = "0.1.3"
log = "0.4.17"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16"

[dependencies.web-sys]
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "RequestCredentials",
  "Response",
  "Window",
]
version = "0.3.57"
